--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -397,7 +397,7 @@
 
                 <pe:layoutPane position="west" size="350" resizable="true" >         
                     <f:facet name="header">  
-                        <ui:insert name="menutitle"> <p:outputLabel value="Menú"/></ui:insert>
+                        <ui:insert name="menutitle"> <p:outputLabel value="Info"/></ui:insert>
                     </f:facet>  
 
 
