--- a/src/main/webapp/script/usuario/myAccount.xhtml
+++ b/src/main/webapp/script/usuario/myAccount.xhtml
@@ -138,7 +138,7 @@
 
                             <h:outputLabel for="firmaEnabled" value="Firma" />  
 
-                            <pe:ckEditor value="#{UserSessionBean.current.firma}" required="true" language="es"
+                            <pe:ckEditor value="#{UserSessionBean.current.firma}" language="es"
                                          toolbar="#{applicationBean.ckEditorToolbar}"
                                          id="textofirma" width="100%" />
 
