--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -13,13 +13,11 @@
         </ui:define>
 
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" >
-                <p:tab title="Vistas" >
+                <p:panel>
                     <h:outputLabel escape="false" value="Las vistas reúnen un grupo de casos según un conjunto de criterios que 
                                    expresan una variedad de estados del caso como, por ejemplo, Nuevo, En proceso o Solucionado. 
                                    Las vistas permiten crear grupos coherentes de casos para asi poder acceder más rapidamente a los casos de interés."/>
-                </p:tab>
-            </p:accordionPanel>
+                </p:panel>
         </ui:define>
 
         <ui:define name="body">
