--- a/src/main/webapp/script/producto/Edit.xhtml
+++ b/src/main/webapp/script/producto/Edit.xhtml
@@ -9,19 +9,16 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.EditProductoTitle}"></h:outputText>
+            <p:outputLabel value="Editar Información de #{applicationBean.productDescription} #{productoController.selected.nombre}"/>
         </ui:define>
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
-                <p:tab title="Productos" id="accionestab1">
+            <p:panel>
                     <h:outputLabel escape="false" value="#{bundle.ayudaProductos}"/>
-                </p:tab>
-            </p:accordionPanel>
+            </p:panel>
         </ui:define>
         <ui:define name="body">
             <h:form id="form">
                 <p:messages/>
-                <p:panel header="Editar Información de #{applicationBean.productDescription} #{productoController.selected.nombre}">
                     <p:tabView id="tabs" activeIndex="#{areaController.editActiveIndex}" dynamic="true">
                         <p:tab id="d1" title="Datos del #{applicationBean.productDescription}" >
 
@@ -205,24 +202,23 @@
 
                         </p:tab>
                     </p:tabView>
+                
+                <br/>
 
-                    <f:facet name="footer">
                         <p:toolbar>  
+                               <p:toolbarGroup align="right">   
+                                   <p:commandButton ajax="false" action="#{productoController.update}" value="#{bundle.Save}" icon="fa fa-save" style="top:4px"/>
+                               </p:toolbarGroup>
+                            
                             <p:toolbarGroup align="left">   
-                                <p:commandButton ajax="false" action="#{productoController.update}" value="#{bundle.SaveLink}" icon="ui-icon-disk"/>
-
-                                <p:separator/>
-
-                                <p:commandButton ajax="false" action="#{productoController.prepareList}" value="#{bundle.ShowAllLink}" immediate="true" icon="ui-icon-folder-open"/>
+                                <p:commandButton ajax="false" action="#{productoController.prepareList}" 
+                                                 value="#{bundle.ShowAllLink}" immediate="true" icon="fa fa-chevron-left"/>
 
                                 <p:separator/>
                                 <p:commandButton id="showDialogButton" value="#{bundle.DestroyLink}" onclick="PF('confirmation').show()" icon="ui-icon ui-icon-trash" />                                
                             </p:toolbarGroup>
                         </p:toolbar>
 
-                    </f:facet>
-
-                </p:panel>
             </h:form>
 
 
