--- a/src/main/webapp/script/producto/List.xhtml
+++ b/src/main/webapp/script/producto/List.xhtml
@@ -8,14 +8,12 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{applicationBean.helpdeskTitle} - Listado de #{applicationBean.productDescription}(s)"></h:outputText>
+            <p:outputLabel value="#{applicationBean.helpdeskTitle} - Listado de #{applicationBean.productDescription}(s)"/>
         </ui:define>
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
-                <p:tab title="Listado de #{applicationBean.productDescription}(s)" id="accionestab1">
+            <p:panel>
                     <h:outputLabel escape="false" value="#{bundle.ayudaProductos}"/>
-                </p:tab>
-            </p:accordionPanel>
+            </p:panel>
         </ui:define>
         <ui:define  name="body">
             <h:form id="form">
