--- a/src/main/webapp/script/vista/List.xhtml
+++ b/src/main/webapp/script/vista/List.xhtml
@@ -68,21 +68,9 @@
 
                     <p:dataTable id="datatableVistas" value="#{vistaController.items}" var="item" emptyMessage="#{bundle.ListVistaEmpty}">
 
-                        <p:columnGroup type="header">  
-                            <p:row>  
-                                <p:column rowspan="2" headerText="#{bundle.ListVistaTitle_nombre}" />  
-                                <p:column colspan="5" headerText="Visibilidad" />  
-                            </p:row>  
-                            <p:row>  
-                                <p:column headerText="#{bundle.ListVistaTitle_visibleToAll}" />                                 
-                                <p:column headerText="#{bundle.ListVistaTitle_idGrupo}" />  
-                                <p:column headerText="#{bundle.ListVistaTitle_idArea}" />  
-                                <p:column headerText="#{bundle.ListVistaTitle_idUsuarioCreadaPor}" />  
-                                <p:column headerText="Opciones" />  
-                            </p:row>  
-                        </p:columnGroup>
+                      
 
-                        <p:column>
+                        <p:column sortBy="#{item.nombre}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListVistaTitle_nombre}"/>
                             </f:facet>
@@ -90,24 +78,24 @@
                             <p:tooltip for="nombreVista" value="#{item.idVista} - #{item.descripcion}"/>
                         </p:column>
 
-                        <p:column>
+                        <p:column sortBy="#{item.visibleToAll}">
                             <f:facet name="header">
                                 <h:outputText value="Visible por"/>
                             </f:facet>
                             <h:outputText value="#{item.visibleToAll ? 'Para Todos':'Privada'}" />
                         </p:column>
 
-                        <p:column>
+                        <p:column sortBy="#{item.idGrupo.nombre}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListVistaTitle_idGrupo}"/>
                             </f:facet>
-                            <h:outputText value="#{item.idGrupo}"/>
+                            <h:outputText value="#{item.idGrupo.nombre}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.idArea.nombre}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListVistaTitle_idArea}"/>
                             </f:facet>
-                            <h:outputText value="#{item.idArea}"/>
+                            <h:outputText value="#{item.idArea.nombre}"/>
                         </p:column>
 
 
