preparing deploy + working on new dashboard
not ready yet

--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -416,7 +416,7 @@
 
                     <p:separator/>
 
-                    <p:commandButton actionListener="#{casoController.applyReglaToSelectedCasos}" update=":mainform:messages form0:panelG1"
+                    <p:commandButton actionListener="#{casoController.applyReglaToSelectedCasos}" update=":mainform:messages :form0:panelG1"
                                      value="Ejecutar"/>
                 </h:form>
 
