--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -39,48 +39,9 @@
 
                     <h:outputLabel value="Visibilidad" for="VisibilidadPanel" style="font-weight: bold"/>
 
-                    <p:outputPanel id="VisibilidadPanel">  
-                        <p:selectOneRadio id="visibility" value="#{vistaController.visibilityOption}" layout="custom">  
-                            <f:selectItem itemLabel="Visible por Todos" itemValue="1" />  
-                            <f:selectItem itemLabel="Grupo" itemValue="2" />  
-                            <f:selectItem itemLabel="Area" itemValue="3" />     
-                            <p:ajax update=":form:VisibilidadPanel" listener="#{vistaController.handleAnyChangeEvent()}" /> 
-                        </p:selectOneRadio>  
-
-
-
-                        <h:panelGrid>
-                            <h:panelGrid columns="3">
-                                <p:radioButton id="visibleToAll" for="visibility" itemIndex="0"/>  
-                                <h:outputLabel value="Visible por Todos:" for="visibleToAll" style="font-weight: bold"/>
-
-                                <p:selectOneButton id="visibleToAllSelect" value="#{vistaController.selected.visibleToAll}" 
-                                                   rendered="#{vistaController.visibilityOption eq 1}"
-                                                   required="true" requiredMessage="#{bundle.VistaRequiredMessage_visibleToAll}">  
-                                    <f:selectItem itemLabel="Si, para todo el mundo" itemValue="true" />  
-                                    <f:selectItem itemLabel="No, sólo yo" itemValue="false" />  
-                                </p:selectOneButton> 
-                            </h:panelGrid>
-
-                            <h:panelGrid columns="3">
-                                <p:radioButton id="idGrupo" for="visibility" itemIndex="1"/>  
-                                <h:outputLabel value="Grupo:" for="idGrupo" style="font-weight: bold"/>
-                                <p:selectOneMenu id="idGrupoSelect" value="#{vistaController.selected.idGrupo}" required="true" requiredMessage="Debe Seleccionar un grupo si desea Visibilidad a nivel de Grupo."
-                                                 rendered="#{vistaController.visibilityOption eq 2}" >
-                                    <f:selectItems value="#{grupoController.itemsAvailableSelectOne}"/>
-                                </p:selectOneMenu> 
-                            </h:panelGrid>
-
-                            <h:panelGrid columns="3">
-                                <p:radioButton id="idArea" for="visibility" itemIndex="2"/>  
-                                <h:outputLabel value="Area:" for="idArea" style="font-weight: bold"/>
-                                <p:selectOneMenu id="idAreaSelect" value="#{vistaController.selected.idArea}" required="true" requiredMessage="Debe Seleccionar un Area si desea Visibilidad a nivel de Area."
-                                                 rendered="#{vistaController.visibilityOption eq 3}">
-                                    <f:selectItems value="#{areaController.itemsAvailableSelectOne}"/>
-                                </p:selectOneMenu>
-                            </h:panelGrid>
-                        </h:panelGrid>  
-                    </p:outputPanel>  
+                     <go:visivility id="VisibilidadPanel" controllerMBean="#{vistaController}"/>
+                     
+                      
 
                     <h:outputLabel value="#{bundle.VistaLabel_descripcion}" for="descripcion" style="font-weight: bold"/>
                     <p:inputTextarea id="descripcion" value="#{vistaController.selected.descripcion}" title="#{bundle.VistaTitle_descripcion}" style="width: 100%;"/>
