--- a/src/main/webapp/script/reportChart/Create.xhtml
+++ b/src/main/webapp/script/reportChart/Create.xhtml
@@ -50,7 +50,7 @@
 
                     <h:outputLabel value="Visibilidad:" for="VisibilidadPanel" style="font-weight: bold"/>
 
-                    <go:visivility id="VisibilidadPanel" controllerMBean="#{reportChartController}"/>
+                    <go:visibility id="VisibilidadPanel" controllerMBean="#{reportChartController}"/>
 
                     <h:outputLabel value="#{bundle.VistaLabel_descripcion}" for="descripcion" style="font-weight: bold"/>
                     <p:inputTextarea id="descripcion" value="#{reportChartController.selected.descripcion}" title="#{bundle.VistaTitle_descripcion}" style="width: 100%;"/>
