--- a/src/main/webapp/script/reportChart/Edit.xhtml
+++ b/src/main/webapp/script/reportChart/Edit.xhtml
@@ -52,7 +52,7 @@
 
 
                 <p:panel>
-                    <go:visivility controllerMBean="#{reportChartController}"/>
+                    <go:visibility controllerMBean="#{reportChartController}"/>
                 </p:panel>
 
                 <p:panel id="serieBase" rendered="#{not empty reportChartController.selected.baseEntityType}">
