--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -39,7 +39,7 @@
 
                     <h:outputLabel value="Visibilidad" for="VisibilidadPanel" style="font-weight: bold"/>
 
-                     <go:visivility id="VisibilidadPanel" controllerMBean="#{vistaController}"/>
+                     <go:visibility id="VisibilidadPanel" controllerMBean="#{vistaController}"/>
                      
                       
 
