--- a/src/main/webapp/script/vista/Create.xhtml
+++ b/src/main/webapp/script/vista/Create.xhtml
@@ -33,8 +33,9 @@
 
                     <h:outputLabel value="Criterios:" style="font-weight: bold"/>
 
-                    <go:filterView id="panelFilter0" controllerMBean="#{vistaController}" filterHelper="#{vistaController.filterHelper2}" showApplyAction="false"
-                                   update=":mainform:messages :form:panelFilter0:panelFilter :form" vistaControllerBackOutcome="/script/vista/List"/>
+                    <go:filterView id="panelFilter0" controllerMBean="#{vistaController}" vista="#{vistaController.selected}"
+                                   filterHelper="#{vistaController.filterHelper2}" showApplyAction="false"
+                                   update=":mainform:messages :form:panelFilter0:panelFilter :form" />
 
 
                     <h:outputLabel value="Visibilidad" for="VisibilidadPanel" style="font-weight: bold"/>
