--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -31,6 +31,7 @@
             <h:form id="formfilter">
                 <go:filterView id="panelFilter0" titleIconClass="fa fa-users page-header-icon"
                                controllerMBean="#{clienteController}" 
+                               vista="#{clienteController.vista}"
                                filterHelper="#{clienteController.filterHelper}" 
                                canChangeFilters="#{filtroAcceso.verificarAccesoAFiltrosIndex()}"
                                update=":mainform:messages :formfilter:panelFilter0:panelFilter :form"
