fix small enum name error

--- a/src/main/webapp/script/reglaTrigger/Create.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Create.xhtml
@@ -20,7 +20,7 @@
             </p:accordionPanel>
         </ui:define>
         <ui:define name="body">
-            <pe:importEnum type="com.itcs.helpdesk.persistence.entityenums.EnumNombreAccion" var="EnumNombreAccion" allSuffix="ALL_ENUM_VALUES" />
+            <pe:importEnum type="com.itcs.helpdesk.persistence.entityenums.EnumTipoAccion" var="EnumNombreAccion" allSuffix="ALL_ENUM_VALUES" />
             <h:form id="form">
 
                 <h1>Nueva Regla de Negocio</h1>
