add cursor style and remove order number

--- a/src/main/webapp/script/reglaTrigger/List.xhtml
+++ b/src/main/webapp/script/reglaTrigger/List.xhtml
@@ -72,7 +72,7 @@
                             <h:outputText value="Descripci&oacute;n"/>
                         </f:facet>
                         <h:panelGroup id="nombreDescripcion">
-                            <i class="fa fa-bars"> &nbsp; <p:outputLabel value="#{item.orden}." /></i>
+                            <i class="fa fa-bars" style="cursor: move;"> &nbsp; </i>
                             
                               &nbsp;
                             <h:outputText id="Nombre" value="#{item.idTrigger}" style="font-weight: bold;"/>
