preparing deploy + working on new dashboard
not ready yet

--- a/src/main/webapp/resources/go/entityCriteria.xhtml
+++ b/src/main/webapp/resources/go/entityCriteria.xhtml
@@ -11,6 +11,7 @@
     <cc:interface>
         <cc:attribute name="filtro" required="true" /> 
         <cc:attribute name="filterHelper" required="true" /> 
+         <cc:attribute name="removeActionListener" required="true" />         
         <cc:attribute name="canChangeFilters" default="true" />
         <cc:attribute name="update" default=":mainform:messages" />
     </cc:interface>
@@ -23,7 +24,7 @@
                 <p:column>
                     <p:selectOneMenu id="idCampo"  value="#{cc.attrs.filtro.idCampo}" disabled="#{not cc.attrs.canChangeFilters}"
                                      panelStyle="width:170px" style="width:160px"  filter="true" filterMatchMode="startsWith"
-                                     required="true" requiredMessage="Favor Seleccione Attributo.">
+                                     required="false" requiredMessage="Favor Seleccione Attributo.">
                         <f:selectItem itemLabel="seleccione un atributo" itemValue="" noSelectionOption="true"/>
                         <f:selectItems value="#{cc.attrs.filterHelper.comparableFields}" var="comparableField" itemValue="#{comparableField.idCampo}" itemLabel="#{comparableField.label}"/>
                         <p:ajax update="@form #{cc.attrs.update}" listener="#{cc.attrs.filterHelper.handleIdCampoChangeEvent(cc.attrs.filtro)}"/>
@@ -116,6 +117,13 @@
                                  required="true" requiredMessage="Se necesita un valor para comparar."
                                  rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'CALENDAR' and cc.attrs.filtro.idComparador.idComparador eq 'BW'}" />
                 </p:column>
+
+                <h:column>
+                    <p:commandButton id="remove" icon="ui-icon-close" 
+                                     actionListener="#{cc.attrs.removeActionListener}" ajax="true" immediate="true"
+                                     update="@parent #{cc.attrs.update}" title="Quitar Criterio de Selección."
+                                     disabled="#{not cc.attrs.canChangeFilters}"/>
+                </h:column>
             </p:row>
         </p:panelGrid>
     </cc:implementation>
